--- a/c-admin/src/main/resources/templates/system/user/edit.html
+++ b/c-admin/src/main/resources/templates/system/user/edit.html
@@ -53,14 +53,10 @@
 							</div>
 						</div>
 						<input type="hidden" name="roleIds" id="roleIds"
-							th:value="${roleIds}">
+							   th:value="${roles}">
 						<div class="form-group">
 							<label class="col-sm-3 control-label">角色</label>
-							<div class="col-sm-8">
-								<label th:each="role:${roles}" class="checkbox-inline">
-									<input name="role" type="radio" th:value="${role.roleId}"
-									th:text="${role.roleName}" th:checked="${role.roleSign}">
-								</label>
+							<div class="col-sm-8" id="rolesLabel">
 							</div>
 						</div>
 						<div class="form-group">
